tests/snapshots/test_runner__tests__compiler__intepret__quotedIdentifier1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(
  "x": 999,
  "whats up": `hello world` ,
  x | print,
  "whats up" | print
)

============
EXIT CODE
============
0

============
STDOUT
============
999
`hello world`

============
STDERR
============
